<resources>
    <string name="app_name">Shaxrizod</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bosh Menu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="olimpiadachilar_uchun">Olimpiadachilar uchun</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="dastur_haqida">Dastur haqida</string>
    <string name="yangiliklar">Yangiliklar</string>
</resources>