<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:background="@color/white"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout

                    android:id="@+id/linear1"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                     h<androidx.cardview.widget.CardView

                        android:id="@+id/card_abituriyuent"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout


                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style3"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="Abituriyentlar uchun"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout

                    android:id="@+id/linear3"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView


                        android:id="@+id/card_maktab"
                        android:layout_width="180dp"
                        android:backgroundTint="@color/material_on_primary_disabled"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style3"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="Maktab o'quvchilari uchun"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout

                    android:id="@+id/linear5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView


                        android:id="@+id/card_sozlamalar"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style3"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="@string/sozlamalar"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout

                    android:id="@+id/linear7"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView


                        android:id="@+id/qoshimcha"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style3"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="Qo'shimcha"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout

                    android:id="@+id/linear2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView


                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:id="@+id/card_oqiuvchi"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style1"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="O'qituvchilar uchun"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout

                    android:id="@+id/linear4"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView


                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:id="@+id/card_olimpiada"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:background="@drawable/back_style1"
                            android:layout_gravity="center"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="@string/olimpiadachilar_uchun"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout

                    android:id="@+id/linear6"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView

                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:id="@+id/card_dastur"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style1"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="@string/dastur_haqida"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout

                    android:id="@+id/linear8"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.cardview.widget.CardView

                        android:backgroundTint="@color/material_on_primary_disabled"
                        android:id="@+id/yangiliklar"
                        android:layout_width="180dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_height="150dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="160dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_style1"
                            android:layout_height="90dp">

                            <TextView

                                android:padding="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:textStyle="normal"
                                android:textSize="16sp"
                                android:textColor="#fff"
                                android:text="@string/yangiliklar"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/card1"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:cardCornerRadius="30dp"-->
<!--        app:layout_constraintVertical_bias="0.05"-->
<!--        app:layout_constraintHorizontal_bias="0.1"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="100dp">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->

<!--            android:background="#ff9292"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->

<!--    </androidx.cardview.widget.CardView>-->


</androidx.constraintlayout.widget.ConstraintLayout>